Add hotfix/html changes to index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <header class="header">Header</header>
         <main class="main">
             <p class="text">Main</p>
+	<h2>Added by hotfix/html</h2>
         </main>
         <footer class="footer">
             Footer
